--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
           加えて、麻婆豆腐の好きな理由や個人的アレンジ方法も記述していきますので、ぜひご覧ください。
         </p>
         <div class="menu">
-          <a href="#cuisine" class="btn btn_jump">
+          <a href="#cuisine" id="c-btn" class="btn btn_jump">
             料理・食べ物の説明
             <div class="btn_arrow">
               <div class="btn_arrow_back">
@@ -65,7 +65,7 @@
               </div>
             </div>
           </a>
-          <a href="#reason" class="btn btn_jump">
+          <a href="#reason" id="r-btn" class="btn btn_jump">
             好きな理由
             <div class="btn_arrow">
               <div class="btn_arrow_back">
@@ -74,7 +74,7 @@
               </div>
             </div>
           </a>
-          <a href="#arrange" class="btn btn_jump">
+          <a href="#arrange" id="a-btn" class="btn btn_jump">
             アレンジレシピ
             <div class="btn_arrow">
               <div class="btn_arrow_back">
@@ -286,4 +286,5 @@
 <script src="./assets/JS/slick.min.js"></script>
 <script src="./assets/JS/main.js"></script>
 </body>
+
 </html>
